BusOne/src/objects/Rule_Message_Translation_vod__c.object
<CustomObject>
    <description>This is a system object that holds the translation of the error messages for rules and drives the message appearance on the Veeva offline platforms.

Do not modify, load or delete data in this object.</description>
    <fields>
        <fullName>Language_vod__c</fullName>
        <description>Language ISO code to which this translation corresponds.</description>
        <inlineHelpText>Language ISO code to which this translation corresponds.</inlineHelpText>
        <label>Language</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Translation_vod__c</fullName>
        <description>Error message translation for rule.</description>
        <inlineHelpText>Error message translation for rule.</inlineHelpText>
        <label>Message Translation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rule_Definition_vod__c</fullName>
        <description>Reference to the Rule Definition record for which this is a message translation.</description>
        <inlineHelpText>Reference to the Rule Definition record for which this is a message translation.</inlineHelpText>
        <label>Rule Definition</label>
        <referenceTo>Rule_Definition_vod__c</referenceTo>
        <relationshipLabel>Rule Message Translations</relationshipLabel>
        <relationshipName>Rule_Message_Translation_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>External Id for the record. Format is [RULE NAME]::[RecordType.Name]::[Language_vod]</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id for the record. Format is [RULE NAME]::[RecordType.Name]::[Language_vod]</inlineHelpText>
        <label>VExternal Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Rule Message Translation</label>
    <nameField>
        <displayFormat>TRNSLN-{00000000}</displayFormat>
        <label>Rule Message Translation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Message Translations</pluralLabel>
    <recordTypes>
        <fullName>SFDC_Rule_Message_Translation_vod</fullName>
        <active>true</active>
        <description>System record type. Do not modify.</description>
        <label>SFDC_Rule_Message_Translation_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>